--- a/shortener/templates/home.html
+++ b/shortener/templates/home.html
@@ -1,9 +1,36 @@
-<div style="width: 800px; margin: 0 auto;">
-<h1> {{title}} </h1>
-	<form action="." method="post">
-		 {% csrf_token %}
-		{{form.as_p}}
-		<input type="submit">
-	</form>
-	
-</div>
+
+{% extends 'base.html' %}
+
+{% block styles %}
+<style>
+body {
+      background-color: #226268;
+      {% if bg_image %}background-image: url({{ bg_image }});{% endif %}
+      background-size: cover;
+    }
+.btn-link {
+      color: #50dfec;
+      text-shadow: none;
+    }
+    .btn-link:hover {
+      color: #000000;
+    }
+</style>
+
+{% endblock styles %}
+{% block content %}
+
+<h1 class="cover-heading">{{ title }}</h1>
+    <p class='lead'>Shorten that URL</p>
+<p class="lead">
+     <div class='col-sm-6 col-sm-offset-3'> 
+                <form method='POST' action='.'> {% csrf_token %}
+                    <!-- <input name='url' type='text' placeholder='Shorten your URL like http://www.codingforentrepreneurs.com' /> -->
+                    {{ form.as_p }}
+                    <input class='btn btn-primary' type='submit' value='Shorten &raquo;' >
+                </form>
+            </div>
+</p>
+
+
+{% endblock content %}
